--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   
   <p>
   
-  [written in notebook] The worst part of having a mental illness is people expect you to behave as if you don't.
+  [written in notebook] The worst part of having a mental illness is people expect you to behave as if you don't.<br><br><br><br>
 [written in notebook] I just hope my death makes more cents than my life.
 You know what’s funny? You know what really makes me laugh? I used to think that my life was a tragedy...but now I realize...it's a comedy.
 You don't listen, do you? You just ask the same questions every week. "How's your job?" "Are you having negative thoughts?" All I have are negative thoughts.
@@ -34,6 +34,8 @@ For my whole life, I didn’t know if I even really existed. But I do. People ar
 We live in a society
 
 </p>
+  
+  
   
   </body>
   </html>
